feat(superadmin): Add comprehensive management pages and improve sidebar [AGENT-001-A]
Sidebar Navigation Improvements:
- Updated i18n labels with proper Title Case and descriptive names
- Added new navigation items: user-logs, permissions, subscriptions, footer-content
- Improved group labels: Organization Management, System Configuration, etc.

New Superadmin Pages Created:
- /superadmin/subscriptions - Tier pricing management with tenant subscriptions
- /superadmin/user-logs - User activity logs, sessions, and export functionality
- /superadmin/permissions - Visual RBAC authority matrix with click-to-toggle
- /superadmin/footer-content - Policy pages, AI chatbot, footer links, company info

Features:
- All pages include demo data fallback when API unavailable
- Bilingual support (English/Arabic) throughout
- Consistent dark theme styling with brand tokens
- Comprehensive dialogs for create/edit operations

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5152,38 +5152,43 @@
       "footer": "If this problem persists, please contact support."
     },
     "nav": {
+      "fmDashboard": "Dashboard",
       "issues": "Issues",
       "ssot": "SSOT Viewer",
       "tenants": "Tenants",
       "users": "Users",
-      "roles": "Roles",
+      "roles": "Roles & Permissions",
+      "permissions": "Authority Matrix",
+      "userLogs": "User Activity Logs",
       "audit": "Audit Logs",
-      "features": "Features",
+      "features": "Feature Flags",
       "integrations": "Integrations",
-      "jobs": "Jobs",
-      "system": "System",
-      "billing": "Billing",
+      "jobs": "Background Jobs",
+      "system": "System Settings",
+      "billing": "Billing & Plans",
+      "subscriptions": "Subscriptions",
       "translations": "Translations",
       "database": "Database",
-      "security": "Security",
+      "security": "Security Settings",
       "analytics": "Analytics",
       "notifications": "Notifications",
-      "catalog": "Catalog",
-      "impersonate": "Impersonate",
-      "importExport": "Import/Export",
-      "import-export": "Import/Export",
+      "catalog": "Product Catalog",
+      "impersonate": "Impersonate User",
+      "importExport": "Import / Export",
+      "import-export": "Import / Export",
       "reports": "Reports",
-      "support": "Support",
-      "vendors": "Vendors"
+      "support": "Support Tickets",
+      "vendors": "Vendors",
+      "footerContent": "Footer & Policies"
     },
     "groups": {
       "ssot": "Issue Tracking",
-      "organization": "Organization",
+      "organization": "Organization Management",
       "marketplace": "Marketplace",
-      "system": "System",
+      "system": "System Configuration",
       "data": "Data Management",
-      "security": "Security",
-      "finance": "Finance",
+      "security": "Security & Compliance",
+      "finance": "Finance & Billing",
       "communication": "Communication"
     },
     "issues": {
