fix: CodeRabbit review fixes - error logging, atomicity, validation [AGENT-001-A]
## Service Files

### gosi-compliance.ts
- Add ObjectId.isValid() check in setGosiNumber, terminateEmployee
- Fix error logging in catch blocks with error details

### lease-service.ts
- Fix paymentDueDay validation (1-28 range)
- Pass session to validation queries for transaction consistency
- Refactor activateLease to accept optional existingSession parameter
- Pass session to activateLease in renewLease to avoid nested transactions
- Fix auto-renewal atomicity with atomic state transition pattern

### contract-lifecycle.ts
- Fix respondToApproval race condition: use atomic arrayFilters update
  instead of read-then-write with array index

### vendor-intelligence.ts
- Fix error logging in getVendorProfile, calculateVendorScore
- Fix error logging in suspendVendor, reinstateVendor

### predictive-maintenance.ts
- Fix error logging in getEquipmentById, getEquipmentByProperty

### ejar-service.ts
- Fix error logging in initiateRenewal

### tenant-screening.ts
- Fix error logging in calculatePaymentHistoryScore
- Fix error logging in calculateRentalHistoryScore

### customer-insights.ts
- Add runtime validation to getCustomerProfile
- Fix error logging in upsertCustomerProfile, recordNPSResponse

## MFA Service
- Fix initMFASetup: remove duplicate recoveryCodes generation
- Store hashed recovery codes in pending document
- completeMFASetup uses server-generated codes

## VSCode Tasks
- Change git add -A to git add -u for safer staging

## Scripts
- git-commit-fixes.ps1: Add Test-Path validation and error handling

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5152,7 +5152,7 @@
       "footer": "If this problem persists, please contact support."
     },
     "nav": {
-      "fmDashboard": "Dashboard",
+      "fmDashboard": "FM Dashboard",
       "issues": "Issues",
       "ssot": "SSOT Viewer",
       "tenants": "Tenants",
