fix(i18n): Replace hardcoded a11y strings with i18n keys (UX-03, TW-01) [AGENT-001-A]
Finding #1 from FIXIZIT-REVIEW-20251229-090020:
- SuperadminLayoutClient: Skip to main content -> accessibility.skipToMainContent
- Login page: Hide/Show password -> auth.hidePassword/showPassword
- Login page: Hide/Show access key -> accessibility.hideAccessKey/showAccessKey
- SSOT page: Scroll to top -> accessibility.scrollToTop
- Search page: Search superadmin -> accessibility.searchSuperadmin

Added new i18n keys to en.json and ar.json:
- accessibility.scrollToTop
- accessibility.searchSuperadmin
- accessibility.hideAccessKey
- accessibility.showAccessKey

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -3008,7 +3008,11 @@
   },
   "accessibility": {
     "skipToContent": "انتقل إلى المحتوى الرئيسي",
-    "skipToMainContent": "انتقل إلى المحتوى الرئيسي"
+    "skipToMainContent": "انتقل إلى المحتوى الرئيسي",
+    "scrollToTop": "الانتقال إلى الأعلى",
+    "searchSuperadmin": "البحث في لوحة المشرف",
+    "hideAccessKey": "إخفاء مفتاح الوصول",
+    "showAccessKey": "عرض مفتاح الوصول"
   },
   "app": {
     "fm": "إدارة المرافق",
