fix(i18n): Replace hardcoded labels with t() calls in user-logs dialogs [AGENT-001-A]
Finding 1 fix from review session FIXIZIT-REVIEW-20251229-122300

- Replaced 21 hardcoded labels in Log Detail and Session Detail dialogs

- Added superadmin.userLogs section with fields.* keys to en.json

- Added Arabic translations in ar.json

- Labels: user, email, tenant, category, status, timestamp, details, metadata,

  device, browser, os, ipAddress, location, started, pagesVisited, actions, duration

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -5180,6 +5180,46 @@
       "support": "الدعم",
       "vendors": "الموردون"
     },
+    "userLogs": {
+      "subtitle": "مراقبة نشاط المستخدمين والجلسات والتفاعلات للدعم",
+      "totalLogs": "إجمالي السجلات",
+      "today": "اليوم",
+      "uniqueUsers": "المستخدمون الفريدون",
+      "errorRate": "معدل الأخطاء",
+      "avgSession": "متوسط الجلسة",
+      "activityLogs": "سجلات النشاط",
+      "activeSessions": "الجلسات النشطة",
+      "searchPlaceholder": "البحث بالمستخدم أو البريد أو الإجراء أو المستأجر...",
+      "noLogsFound": "لا توجد سجلات نشاط",
+      "noSessions": "لا توجد جلسات نشطة",
+      "pages": "صفحات",
+      "actions": "إجراءات",
+      "statusActive": "نشط",
+      "statusEnded": "منتهي",
+      "logDetails": "تفاصيل سجل النشاط",
+      "sessionDetails": "تفاصيل الجلسة",
+      "terminateSession": "إنهاء الجلسة",
+      "terminateNotImplemented": "إنهاء الجلسة غير مطبق بعد",
+      "fields": {
+        "user": "المستخدم",
+        "email": "البريد الإلكتروني",
+        "tenant": "المستأجر",
+        "category": "الفئة",
+        "status": "الحالة",
+        "timestamp": "الوقت",
+        "details": "التفاصيل",
+        "metadata": "البيانات الوصفية",
+        "device": "الجهاز",
+        "browser": "المتصفح",
+        "os": "نظام التشغيل",
+        "ipAddress": "عنوان IP",
+        "location": "الموقع",
+        "started": "بدأت",
+        "pagesVisited": "الصفحات المزارة",
+        "actions": "الإجراءات",
+        "duration": "المدة"
+      }
+    },
     "issues": {
       "title": "متتبع مشاكل النظام",
       "subtitle": "الوصول الكامل للنظام • تتبع وإدارة جميع المشاكل",
