--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5195,6 +5195,46 @@
       "finance": "Finance & Billing",
       "communication": "Communication"
     },
+    "userLogs": {
+      "subtitle": "Monitor user activity, sessions, and interactions for support",
+      "totalLogs": "Total Logs",
+      "today": "Today",
+      "uniqueUsers": "Unique Users",
+      "errorRate": "Error Rate",
+      "avgSession": "Avg Session",
+      "activityLogs": "Activity Logs",
+      "activeSessions": "Active Sessions",
+      "searchPlaceholder": "Search by user, email, action, or tenant...",
+      "noLogsFound": "No activity logs found",
+      "noSessions": "No active sessions",
+      "pages": "pages",
+      "actions": "actions",
+      "statusActive": "Active",
+      "statusEnded": "Ended",
+      "logDetails": "Activity Log Details",
+      "sessionDetails": "Session Details",
+      "terminateSession": "Terminate Session",
+      "terminateNotImplemented": "Session termination not yet implemented",
+      "fields": {
+        "user": "User",
+        "email": "Email",
+        "tenant": "Tenant",
+        "category": "Category",
+        "status": "Status",
+        "timestamp": "Timestamp",
+        "details": "Details",
+        "metadata": "Metadata",
+        "device": "Device",
+        "browser": "Browser",
+        "os": "OS",
+        "ipAddress": "IP Address",
+        "location": "Location",
+        "started": "Started",
+        "pagesVisited": "Pages Visited",
+        "actions": "Actions",
+        "duration": "Duration"
+      }
+    },
     "issues": {
       "title": "System Issue Tracker",
       "subtitle": "Full system access • Track and manage all issues",
