fix(i18n): Add accessibility.backToIssuesList translation key [AGENT-001-A]
Finding 1 from review FIXIZIT-REVIEW-20251229-090020

- Added backToIssuesList to accessibility section in en.json and ar.json

- Updated admin/issues/[id]/page.tsx to use t() for aria-label

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -3012,7 +3012,8 @@
     "scrollToTop": "الانتقال إلى الأعلى",
     "searchSuperadmin": "البحث في لوحة المشرف",
     "hideAccessKey": "إخفاء مفتاح الوصول",
-    "showAccessKey": "عرض مفتاح الوصول"
+    "showAccessKey": "عرض مفتاح الوصول",
+    "backToIssuesList": "العودة إلى قائمة المشاكل"
   },
   "app": {
     "fm": "إدارة المرافق",
