fix: Review findings FIXIZIT-REVIEW-20251229-133720
Finding 1 (High): Fix permissive test assertions
- presigned-url.route.test.ts: Fixed S3NotConfiguredError mock with
  toJSON() method, tightened assertions from [500,501] to exact status
- owner.route.test.ts: Fixed UnauthorizedError message to 'Unauthenticated',
  tightened assertion from [401,500] to expect 401

Finding 2 (Medium): Complete i18n in user-logs page
- Localized filter labels (All Categories, All Status, date ranges)
- Localized table headers (Time, User, Tenant, Action, etc.)
- Updated formatDuration to use Intl.NumberFormat for locale-aware units
- Added new i18n keys to en.json and ar.json

Also: Added tmp/ to eslint ignore pattern in package.json

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -2992,6 +2992,11 @@
       "nextRefresh": "التحديث التالي: {{time}}",
       "secondsAgo": "منذ {{count}} ثانية"
     },
+    "timeUnits": {
+      "secondsShort": "{{count}}ث",
+      "minutesShort": "{{count}}د",
+      "hoursMinutesShort": "{{hours}}س {{minutes}}د"
+    },
     "pages": {
       "dashboard": "لوحة التحكم",
       "properties": "العقارات",
@@ -5189,6 +5194,7 @@
       "errorRate": "معدل الأخطاء",
       "avgSession": "متوسط الجلسة",
       "activityLogs": "سجلات النشاط",
+      "activityLogsDescription": "نشاط المستخدمين والطلبات في الوقت الفعلي",
       "activeSessions": "الجلسات النشطة",
       "searchPlaceholder": "البحث بالمستخدم أو البريد أو الإجراء أو المستأجر...",
       "noLogsFound": "لا توجد سجلات نشاط",
@@ -5201,6 +5207,38 @@
       "sessionDetails": "تفاصيل الجلسة",
       "terminateSession": "إنهاء الجلسة",
       "terminateNotImplemented": "إنهاء الجلسة غير مطبق بعد",
+      "filters": {
+        "allCategories": "جميع الفئات",
+        "allStatus": "جميع الحالات",
+        "categories": {
+          "auth": "المصادقة",
+          "navigation": "التنقل",
+          "crud": "العمليات",
+          "settings": "الإعدادات",
+          "api": "API",
+          "error": "خطأ"
+        },
+        "status": {
+          "success": "نجاح",
+          "warning": "تحذير",
+          "error": "خطأ"
+        },
+        "dateRange": {
+          "today": "اليوم",
+          "week": "هذا الأسبوع",
+          "month": "هذا الشهر",
+          "all": "كل الوقت"
+        }
+      },
+      "table": {
+        "time": "الوقت",
+        "user": "المستخدم",
+        "tenant": "المستأجر",
+        "action": "الإجراء",
+        "category": "الفئة",
+        "status": "الحالة",
+        "details": "التفاصيل"
+      },
       "fields": {
         "user": "المستخدم",
         "email": "البريد الإلكتروني",
