fix(i18n): add missing superadmin.groups translations [AGENT-001-A]
Added 8 missing Arabic translations for superadmin.groups:
- ssot: تتبع المشكلات (Issue Tracking)
- organization: إدارة المنظمة (Organization Management)
- marketplace: السوق (Marketplace)
- system: إعدادات النظام (System Configuration)
- data: إدارة البيانات (Data Management)
- security: الأمان والامتثال (Security & Compliance)
- finance: المالية والفواتير (Finance & Billing)
- communication: الاتصالات (Communication)

Fixes I18n Validation CI failure.

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -5161,6 +5161,16 @@
       "exit": "الخروج من لوحة المسؤول",
       "footer": "إذا استمرت هذه المشكلة، يرجى الاتصال بالدعم."
     },
+    "groups": {
+      "ssot": "تتبع المشكلات",
+      "organization": "إدارة المنظمة",
+      "marketplace": "السوق",
+      "system": "إعدادات النظام",
+      "data": "إدارة البيانات",
+      "security": "الأمان والامتثال",
+      "finance": "المالية والفواتير",
+      "communication": "الاتصالات"
+    },
     "nav": {
       "fmDashboard": "لوحة إدارة المرافق",
       "issues": "المشاكل",
