fix(i18n): Replace hardcoded strings with t() calls [AGENT-001-A]
Finding 1 from review FIXIZIT-REVIEW-20251229-181903-96e7174f7 (UX-03)

SuperadminLayoutClient.tsx:
- Refactored redirect state into SuperadminRedirectState component
- Added i18n for 'Redirecting to login...', 'Verifying session...'
- Added i18n for 'Click here if not redirected'
- Now wrapped inside I18nProvider context

ssot/page.tsx:
- Added i18n for error messages (fetch/load failed, unknown error)
- Added i18n for button text (Refresh, Download, Retry)
- Added i18n for download success toast

i18n keys added:
- superadmin.auth.redirectingToLogin
- superadmin.auth.verifyingSession
- superadmin.auth.clickHereIfNotRedirected
- superadmin.ssot.fetchFailed/loadFailed/downloadSuccess
- common.refresh/download/retry/unknownError

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -5161,6 +5161,18 @@
       "exit": "الخروج من لوحة المسؤول",
       "footer": "إذا استمرت هذه المشكلة، يرجى الاتصال بالدعم."
     },
+    "auth": {
+      "redirectingToLogin": "جاري التحويل لتسجيل الدخول...",
+      "verifyingSession": "جاري التحقق من الجلسة...",
+      "clickHereIfNotRedirected": "اضغط هنا إذا لم يتم التحويل"
+    },
+    "ssot": {
+      "title": "عارض SSOT",
+      "description": "عرض للقراءة فقط لملف PENDING_MASTER.md",
+      "fetchFailed": "فشل في جلب SSOT",
+      "loadFailed": "فشل في تحميل SSOT",
+      "downloadSuccess": "تم تنزيل ملف SSOT"
+    },
     "groups": {
       "ssot": "تتبع المشكلات",
       "organization": "إدارة المنظمة",
