fix: comprehensive code quality fixes across 55 files [AGENT-001-A]
Validation & Null Checks:
- checkout/page.tsx: null check for getPlan()
- footer-content/page.tsx: client-side validation for links/company
- fatoora-service.ts: is_sandbox === false explicit check

Race Conditions & Transactions:
- tenant-lifecycle.ts: kill switch in MongoDB transactions
- tenant-lifecycle.ts: ghost session DB persistence
- tenant-lifecycle.ts: non-blocking pre-restore backup
- inspection-service.ts: unset defaults BEFORE insert
- ejar-service.ts: atomic update

Database Safety:
- lease-service.ts: result.value.seq + division by zero
- gosi-compliance.ts: matchedCount check
- vendor-intelligence.ts: matchedCount check
- performance-management.ts: orgId in updates

Date Handling:
- automated-reports.ts: date rollover fix (set to 1)
- expense-categorization.ts: dateTo for comparison

i18n & Design Tokens:
- fm-dashboard.tsx: design tokens (bg-card, text-foreground)
- translations/page.tsx: active tab contrast
- database/page.tsx: i18n for description

Real Data Integration:
- god-mode/route.ts: replace mock with real DB queries

Test Improvements:
- metrics.route.test.ts: limit assertion
- accessibility.spec.ts: WCAG contrast calculation
- send.test.ts: proper mock assertions
- vitest.setup.ts: reconnect limiting (MAX_RECONNECT_ATTEMPTS=3)

Other Fixes:
- command-palette.tsx: focus handling + isMacPlatform helper
- notification-engine.ts: ObjectId validation
- user-logs/page.tsx: stale closure fix
- superadmin-flows.spec.ts: string literal fix

Verification: pnpm typecheck && pnpm lint - 0 errors

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -4581,13 +4581,13 @@
   "pricing": {
     "checkout": {
       "back": "العودة للأسعار",
-      "maxUsers": "الحد الأقصى {{max}} مستخدم",
+      "maxUsers": "الحد الأقصى",
       "proceed": "المتابعة للدفع",
       "subtitle": "راجع تفاصيل خطتك",
       "title": "الدفع",
       "total": "المجموع",
       "users": "عدد المستخدمين",
-      "vatNote": "شامل ضريبة القيمة المضافة (15%)"
+      "vatNote": "سيتم إضافة ضريبة القيمة المضافة (15%) عند الدفع"
     },
     "custom": "مخصص",
     "free": "مجاني",
