--- a/i18n/en.json
+++ b/i18n/en.json
@@ -127,12 +127,15 @@
     "accountDesc": "Create your account to get started",
     "accountInfo": "Account Information",
     "back": "Back",
+    "backToPricing": "Back to Pricing",
     "companyName": "Company Name",
     "confirmPassword": "Confirm Password",
     "continueToPayment": "Continue to Payment",
     "createAccount": "Create Account",
     "email": "Email",
     "firstName": "First Name",
+    "invalidPlan": "Invalid Plan",
+    "invalidPlanDescription": "The selected plan does not exist. Please choose a valid plan.",
     "lastName": "Last Name",
     "monthly": "per month",
     "orderSummary": "Order Summary",
@@ -2984,8 +2987,6 @@
     "reset": "Reset",
     "clear": "Clear",
     "apply": "Apply",
-    "refresh": "Refresh",
-    "download": "Download",
     "upload": "Upload",
     "create": "Create",
     "update": "Update",
@@ -3024,7 +3025,6 @@
     "email": "Email",
     "viewDetails": "View Details",
     "vendors": "Vendors",
-    "retry": "Retry",
     "na": "Na",
     "approve": "Approve",
     "reject": "Reject",
