fix(i18n): Replace hardcoded strings with i18n keys (Finding #1) [AGENT-001-A]
- SuperadminLayoutClient.tsx: Already uses i18n for redirect messages
- app/superadmin/ssot/page.tsx: Replace hardcoded metadata labels (File, Last Modified, Size, Lines), search placeholder, PENDING_MASTER.md title and description
- app/(fm)/admin/issues/[id]/page.tsx: Replace all hardcoded toast messages, button labels, card titles with t() calls
- i18n/sources/superadmin.translations.json: Add superadmin.auth.* and superadmin.ssot.* keys (EN + AR)
- i18n/sources/admin.translations.json: Add issues.* and common.* keys (EN + AR)

Review: FIXIZIT-REVIEW-20251229-142458-934306bfc
Finding #1: Medium severity - UX-03/FE-07 hardcoded user-facing strings

--- a/i18n/sources/admin.translations.json
+++ b/i18n/sources/admin.translations.json
@@ -545,7 +545,45 @@
     "admin.routeMetrics.history.chart.empty": "Snapshots are saved automatically when you run npm run check:route-aliases; rerun after major refactors to capture new data.",
     "admin.routeMetrics.history.chart.caption": "Data source: reports/route-metrics/history/*.json",
     "admin.routeMetrics.history.chart.tooltip.timestamp": "Generated at",
-    "admin.routeMetrics.history.chart.tooltip.rate": "Duplication rate"
+    "admin.routeMetrics.history.chart.tooltip.rate": "Duplication rate",
+    "issues.notFound": "Issue not found",
+    "issues.fetchFailed": "Failed to fetch issue",
+    "issues.loadFailed": "Failed to load issue",
+    "issues.saveFailed": "Failed to save",
+    "issues.saveFailedChanges": "Failed to save changes",
+    "issues.updateSuccess": "Issue updated successfully",
+    "issues.deleteFailed": "Failed to delete",
+    "issues.deleteSuccess": "Issue deleted successfully",
+    "issues.deleteFailedIssue": "Failed to delete issue",
+    "issues.comments.apiMissing": "Comments API not implemented yet",
+    "issues.comments.comingSoon": "Comments feature coming soon",
+    "issues.details.title": "Issue Details",
+    "issues.details.location": "Location",
+    "issues.details.properties": "Properties",
+    "issues.details.metadata": "Metadata",
+    "issues.details.labels": "Labels",
+    "issues.details.riskTags": "Risk Tags",
+    "issues.details.auditHistory": "Audit History",
+    "issues.details.auditDescription": "Timeline of all changes and agent mentions",
+    "issues.details.noActivity": "No activity recorded yet",
+    "issues.details.comments": "Comments",
+    "issues.details.addComment": "Add a comment...",
+    "issues.details.noComments": "No comments yet",
+    "issues.details.postComment": "Post",
+    "common.notFound": "Not Found",
+    "common.error": "Error",
+    "common.note": "Note",
+    "common.created": "Created",
+    "common.lastUpdated": "Last updated",
+    "common.refresh": "Refresh",
+    "common.save": "Save",
+    "common.saving": "Saving...",
+    "common.delete": "Delete",
+    "common.saved": "Saved",
+    "common.deleted": "Deleted",
+    "common.cancel": "Cancel",
+    "common.unknownError": "Unknown error",
+    "common.retry": "Retry"
   },
   "ar": {
     "admin.accessDenied": "تم رفض الوصول",
@@ -1093,6 +1131,44 @@
     "admin.routeMetrics.history.chart.empty": "يتم حفظ اللقطات تلقائياً عند تشغيل ‎npm run check:route-aliases‎، أعد تشغيل الأمر بعد عمليات التعديل الكبيرة لالتقاط بيانات جديدة.",
     "admin.routeMetrics.history.chart.caption": "مصدر البيانات: ‎reports/route-metrics/history/*.json‎",
     "admin.routeMetrics.history.chart.tooltip.timestamp": "وقت التوليد",
-    "admin.routeMetrics.history.chart.tooltip.rate": "معدل التكرار"
+    "admin.routeMetrics.history.chart.tooltip.rate": "معدل التكرار",
+    "issues.notFound": "المشكلة غير موجودة",
+    "issues.fetchFailed": "فشل في جلب المشكلة",
+    "issues.loadFailed": "فشل في تحميل المشكلة",
+    "issues.saveFailed": "فشل في الحفظ",
+    "issues.saveFailedChanges": "فشل في حفظ التغييرات",
+    "issues.updateSuccess": "تم تحديث المشكلة بنجاح",
+    "issues.deleteFailed": "فشل في الحذف",
+    "issues.deleteSuccess": "تم حذف المشكلة بنجاح",
+    "issues.deleteFailedIssue": "فشل في حذف المشكلة",
+    "issues.comments.apiMissing": "واجهة التعليقات غير مطبقة بعد",
+    "issues.comments.comingSoon": "ميزة التعليقات قريباً",
+    "issues.details.title": "تفاصيل المشكلة",
+    "issues.details.location": "الموقع",
+    "issues.details.properties": "الخصائص",
+    "issues.details.metadata": "البيانات الوصفية",
+    "issues.details.labels": "التصنيفات",
+    "issues.details.riskTags": "علامات المخاطر",
+    "issues.details.auditHistory": "سجل التدقيق",
+    "issues.details.auditDescription": "الجدول الزمني لجميع التغييرات وإشارات الوكيل",
+    "issues.details.noActivity": "لم يتم تسجيل أي نشاط بعد",
+    "issues.details.comments": "التعليقات",
+    "issues.details.addComment": "أضف تعليقاً...",
+    "issues.details.noComments": "لا توجد تعليقات بعد",
+    "issues.details.postComment": "نشر",
+    "common.notFound": "غير موجود",
+    "common.error": "خطأ",
+    "common.note": "ملاحظة",
+    "common.created": "تم الإنشاء",
+    "common.lastUpdated": "آخر تحديث",
+    "common.refresh": "تحديث",
+    "common.save": "حفظ",
+    "common.saving": "جارٍ الحفظ...",
+    "common.delete": "حذف",
+    "common.saved": "تم الحفظ",
+    "common.deleted": "تم الحذف",
+    "common.cancel": "إلغاء",
+    "common.unknownError": "خطأ غير معروف",
+    "common.retry": "إعادة المحاولة"
   }
 }
